--- a/README.adoc
+++ b/README.adoc
@@ -1,6 +1,11 @@
 = Original Hacking Culture Sources
 
+== Glossary
+
+1. Jargon file link:https://jargon-file.org/[archive], link:http://www.catb.org/~esr/jargon/[original webpage] 
+
 == How things are working
 
 1. link:https://www.youtube.com/watch?v=CJlrbMHLBd4&list=PLtaR0lZhSyAPLuoSbMA29s3Ry8ZUvKff3[Secret life of machines,window=_blank] authored
    by link:https://www.youtube.com/@timhunkin1[Tim Hunkin]
+
