--- a/README.adoc
+++ b/README.adoc
@@ -12,9 +12,9 @@
 == History of culture
 
 1. link:http://www.textfiles.com/hacking/[Textfiles collection of hacking]
+2. link:http://www.mit.edu/~xela/tao.html[Tao of programming]
 
 == Magazines
 
 1. link:https://2600.com/[2600 magazine]
 2. link:http://phrack.org/[Phrack magazine]
-
