--- a/README.adoc
+++ b/README.adoc
@@ -7,7 +7,10 @@
 == How things are working
 
 1. link:https://www.youtube.com/watch?v=CJlrbMHLBd4&list=PLtaR0lZhSyAPLuoSbMA29s3Ry8ZUvKff3[Secret life of machines,window=_blank] authored
-   by link:https://www.youtube.com/@timhunkin1[Tim Hunkin]
+   by link:https://www.youtube.com/@timhunkin1[yt Tim Hunkin]
+2. link:https://www.youtube.com/@Computerphile[yt Computerphile]
+3. link:https://www.youtube.com/@ComputerHistory[yt Computer history]
+4. link:https://www.youtube.com/@DigilogueCollection[yt Digilogue Collection]
 
 == History of culture
 
